[package]
name = "rust_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
log = "0.4.20"
serde = { version="1.0", features = ["derive"]}
bincode = { version = "2.0.0-rc.3", features = ["derive","serde"]}